cleanup, formatting, deps